# NuiPet

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  neutralino.config.json  package.json
.github/ISSUE_TEMPLATE/: Discussion.md  bug.md  feature.md  refactor.md
ISSUE_TEMPLATE/: bug.md  discusion.md  feature.md  refactor.md
installer/: NuiPet.iss
releases/v0.1.0/: README.md  resources.neu
releases/v0.2.1/: README.md
releases/v0.2.1-beta/: README.md  resources.neu
releases/v0.2.2/: README.md  resources.neu
releases/v0.2.3/: README.md  resources.neu
releases/v0.3.0/: README.md  THIRD_PARTY_NOTICES.md
scripts/: build-installer.js  check-assets.js  dev-server.js  neu-runner.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tmp/smooth-30fps-work/: compact_pet_json.py  smooth_atlas.py
tmp/smooth-30fps-work/qa/: qa-manifest.json  smooth-30fps-review.json
web/: index.html  main.js  styles.css
web/assets/pets/luyi-nui/: pet.json
