[package]
name = "nuipet"
version = "0.1.0"
description = "A Tauri desktop pet based on Luyi Nui."
authors = ["Zeroysx"]
edition = "2021"
license = "MIT"

[lib]
name = "nuipet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
